--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,18 @@
 {
-    "manifest_version": 3,
-    "name":"Surfi",
-    "descrption":"Add a custom Background google",
-    "version": "1.0",
-    "icons":{
-        "16":"images/icon.jpg",
-        "48":"images/icon.jpg",
-        "128":"images/icon.jpg"
-    },
-    "page_actios":{
-        "default_icon":{
-            "16":"images/icon.jpg",
-            "48":"images/icon.jpg",
-            "128":"images/icon.jpg"
-        }
-    },
-    "content_scripts":[{
-        "matches":["https://www.google.com/*","https://www.google.com.co/*" ],
-        "css":["main.css"],
-        "js":["main.js"]
-    }]
-
+  "manifest_version": 2,
+  "name": "Surfi",
+  "description": "Add a custom Background google",
+  "version": "1.0",
+  "icons": { "16": "favicon.png", "48": "favicon.png", "128": "favicon.png" },
+  "browser_action": {
+    "default_title": "Surfi",
+    "default_icon": "favicon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.google.com/search*", "https://www.google.com.co/search*"],
+      "css": ["main.css"],
+      "js": ["main.js"]
+    }
+  ]
 }
