--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Surfi",
   "description": "Add a custom Background google",
   "version": "1.0",
   "icons": { "16": "favicon.png", "48": "favicon.png", "128": "favicon.png" },
-  "action": {
+  "browser_action": {
     "default_title": "Surfi",
     "default_icon": "favicon.png"
   },
