--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Surfi",
-  "description": "Add a custom Background google",
+  "description": "A plugin that shows you website reliability and formats google search.",
   "version": "1.0.0.1",
   "icons": { "16": "favicon.png", "48": "favicon.png", "128": "favicon.png" },
   "browser_action": {
