--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,8 @@
     "default_icon":"assets/logo/favicon.png",
     "default_popup": "popup/main/popup.html"
   },
-  "permissions":["scripting", "tabs", "activeTab"],
+  "permissions":["scripting", "tabs", "activeTab", "storage"],
   "background": {
     "service_worker": "scripts/background.js"
-}
+  }
 }
