--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Surfi",
   "description": "A plugin that shows you website reliability and formats google search.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "icons": {
     "16": "./assets/favicon/favicon-16x16.png",
     "32": "./assets/favicon/favicon-32x32.png",
@@ -23,7 +23,7 @@
   ],
   "action": {
     "default_title": "Surfi",
-    "default_icon": "assets/logo/SurfiSurfi.png",
+    "default_icon": "./assets/favicon/favicon-128x128.png",
     "default_popup": "popup/main/popup.html"
   },
   "background": {
