Fix: delete activeTab unused permission

--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "manifest_version": 3,
   "name": "Surfi",
   "description": "A plugin that shows you website reliability and formats google search.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "icons": {
     "16": "./assets/favicon/favicon-16x16.png",
     "32": "./assets/favicon/favicon-32x32.png",
     "48": "./assets/favicon/favicon-48x48.png",
     "128": "./assets/favicon/favicon-128x128.png"
   },
-  "permissions": ["tabs", "activeTab"],
+  "permissions": ["tabs"],
   "content_scripts": [
     {
       "matches": [
